[gd_scene load_steps=4 format=3 uid="uid://chj7ancmvkg4h"]

[ext_resource type="Script" uid="uid://eejc07o3f6ao" path="res://Objects/Win Area/WinArea.gd" id="1_lorcj"]
[ext_resource type="Texture2D" uid="uid://bewc7anqqqps" path="res://Textures/Objects/Win Area/Win Area.png" id="2_k4cqk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dq6rd"]
size = Vector2(96, 128)

[node name="WinArea" type="Area2D"]
monitorable = false
script = ExtResource("1_lorcj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_dq6rd")

[node name="WinTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-68, 0)
texture = ExtResource("2_k4cqk")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="WinTimer" to="." method="_on_win_timer_timeout"]
